# AoC

./: .gitattributes  .gitignore  GetInput.ps1  README.md  getinput.sh
2022/: README.md
2022/src/: lib.rs  main.rs
2022/src/days/: day01.rs
2023/: .gitignore  .ocamlformat  2023.opam  README.md  dune-project
2023/lib/: aoc.ml
2023/test/: dune
2024/: .ocamlformat  README.md  aoc2024.opam  dune-project
2024/lib/: aoc.ml
2024/py/: day01.py  day05.py  day06.py  day08.py  day10.py
2025/: .ocamlformat  README.md  aoc2025.opam  dune-project
2025/lib/: aoc.ml
2025/py/: day01.py
