(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github tadmccorkle/AoC))

(authors "Tad McCorkle")

(license MIT)

(package
 (name aoc2024)
 (synopsis "AoC 2024")
 (description "Advent of Code 2024, OCaml Edition")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
